--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,11 @@ body {
     font-size: 18px;
     font-family: "Open Sans", sans-serif; 
 }
+
+/* Global */
+
+.container {
+    width: 90%;
+    margin: auto;
+    overflow: hidden;
+}
