Add in background image for the showcase section. Apply float properties to the h1 and button elements of the showcase section

--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,17 @@ body {
     margin: auto;
     overflow: hidden;
 }
+
+/* Showcase section */
+
+#showcase {
+    background: url("/images/bg-hero-desktop.svg");
+}
+
+#showcase header h1 {
+    float: left;
+}
+
+#showcase header button {
+    float: right;
+}
