--- a/css/style.css
+++ b/css/style.css
@@ -23,4 +23,9 @@ body {
 
 #showcase header button {
     float: right;
+    margin-top: 30px;
+    width: 12%;
+    height: 40px;
+    border-radius: 20px;
+    font-weight: bold;
 }
