--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,10 @@ body {
     background: url("/images/bg-hero-desktop.svg");
 }
 
-#showcase header h1 {
+#showcase header img {
     float: left;
+    margin-top: 30px;
+    height: 30px;
 }
 
 #showcase header button {
