--- a/css/style.css
+++ b/css/style.css
@@ -31,3 +31,16 @@ body {
     border-radius: 20px;
     font-weight: bold;
 }
+
+#showcase div#showcase-info {
+    float: left;
+    width: 40%;
+}
+
+#showcase div#showcase-image {
+    float: right;
+}
+
+#showcase div#showcase-image img {
+    height: 450px;
+}
