Change the value of the top margin for image element. Change the width of the div holding the imag e and button to be the full width of the parent container

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
     width: 90%;
     margin: auto;
     overflow: hidden;
+    border: 1px solid blue;
 }
 
 /* Showcase section */
@@ -19,8 +20,13 @@ body {
 
 #showcase header img {
     float: left;
-    margin-top: 30px;
+    margin-top: 50px;
     height: 30px;
+    border: 1px solid red;
+}
+
+#showcase div#logo {
+    width: 100%;
 }
 
 #showcase header button {
