--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ body {
     width: 90%;
     margin: auto;
     overflow: hidden;
-    border: 1px solid blue;
 }
 
 /* Showcase section */
@@ -31,11 +30,14 @@ body {
 
 #showcase header button {
     float: right;
-    margin-top: 30px;
-    width: 12%;
-    height: 40px;
-    border-radius: 20px;
+    margin-top: 35px;
+    width: 16%;
+    height: 50px;
+    border-radius: 30px;
+    font-size: 0.8em;
     font-weight: bold;
+    box-shadow: 1px 3px 7px -4px hsl(208, 11%, 55%);
+    
 }
 
 #showcase div#showcase-info {
