Give top margin to the main section for separation. Add in style propery for the .body-div class

--- a/css/style.css
+++ b/css/style.css
@@ -75,3 +75,14 @@ body {
     height: 490px;
 }
 
+/*  Main section */
+
+#main {
+    margin-top: 100px;
+}
+
+#main .body-div {
+    border: 1px solid red;
+    margin-bottom: 30px;
+}
+
