--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body {
 .body-div {
     border: 1px solid red;
     margin-bottom: 30px;
+    min-height: 430px;
 }
 
 /* Showcase section */
@@ -86,4 +87,29 @@ body {
     margin-top: 100px;
 }
 
+#main div#grow h2, #main div#grow p {
+    float: left;
+    width: 40%;
+}
+
+#main div#grow h2 {
+    margin-top: 150px;
+    margin-left: 142px;
+    margin-bottom: 5px;
+    font-family: "Poppins", sans-serif;
+}
+
+#main div#grow p {
+    margin-right: 200px;
+    margin-left: 142px;
+    color: hsl(208, 11%, 55%);
+}
+
+#main div#grow img {
+    float: right;
+    height: 340px;
+    margin-right: 50px;
+    margin-top: -260px;
+}
+    
 
