--- a/css/style.css
+++ b/css/style.css
@@ -171,3 +171,16 @@ body {
     margin: -100px 25px 0 0;
 }
 
+/* Overlap div */
+
+div#get-started {
+    border: 1px solid red;
+    width: 60%;
+    margin: auto;
+    min-height: 280px;
+    text-align: center;
+}
+
+
+
+
