--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,19 @@ div#get-started {
     text-align: center;
 }
 
+div#get-started h1 {
+    margin-top: 70px;
+    font-family: "Poppins", sans-serif;
+    font-size: 1.8em;
+}
 
-
-
+div#get-started button {
+    width: 50%;
+    height: 80px;
+    border-radius: 40px;
+    background-color:hsl(322, 100%, 66%);
+    color: white;
+    font-family: "Open Sans", sans-serif; 
+    font-size: 18px;
+    font-weight: bold;
+}
