--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 body {
     font-size: 18px;
     font-family: "Open Sans", sans-serif; 
+    width: 100%;
+    margin: 0px;
 }
 
 /* Global */
@@ -198,4 +200,15 @@ div#get-started button {
     font-family: "Open Sans", sans-serif; 
     font-size: 18px;
     font-weight: bold;
+}
+
+footer {
+    background-color: hsl(192, 100%, 9%);
+    color: white;
+    padding-left: 90px;
+}
+
+footer div#footer-left {
+    width: 30%;
+    float: left;
 }
