--- a/css/style.css
+++ b/css/style.css
@@ -219,6 +219,7 @@ footer div#footer-left {
     width: 40%;
     float: left;
     border: 1px solid red;
+    margin-top: 30px;
 }
 
 footer div#footer-left img {
