Change the css selector from selecting all images from the footer-left div, to just the footer-logo image

--- a/css/style.css
+++ b/css/style.css
@@ -222,8 +222,9 @@ footer div#footer-left {
     margin-top: 30px;
 }
 
-footer div#footer-left img {
+footer div#footer-left #footer-logo {
     background-color: white;
+    margin-bottom: 30px;
 }
 
 footer div#spans {
