--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,7 @@ footer {
     padding: 160px 0 40px 50px;
     font-family: "Open Sans";
     font-size: 16px;    
+    line-height: 1.5;
 }
 
 
@@ -219,19 +220,20 @@ footer div#footer-left {
     width: 40%;
     float: left;
     border: 1px solid red;
-    margin-top: 30px;
+    padding-top: 50px;
 }
 
 footer div#footer-left #footer-logo {
     background-color: white;
-    margin-bottom: 30px;
+    margin-bottom: 23px;
 }
 
 footer div#spans {
     float: left;
-    width: 10%;
+    width: 5%;
     height: 200px;
     margin-top: 20px;
+    padding-right: 15px
 }
 
 footer div#footer-left p {
