--- a/css/style.css
+++ b/css/style.css
@@ -260,12 +260,15 @@ footer div#footer-middle {
     float: left;
     border: 1px solid yellow;
     height: 400px;
+    font-size: 18px;
 }
 
 /* Footer middle a */
 footer div#footer-middle-a {
     border: 1px solid green;
     float: left;
+    margin-left: -35px;
+    margin-top: 128px
 }
 
 /* Footer middle a and b */
