--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body {
 .container-2 {
     width: 87%;
     margin: auto;
+    padding-bottom: 300px;
 }
 
 .body-div {
@@ -176,13 +177,18 @@ body {
 /* Overlap div */
 
 div#get-started {
-    border: 1px solid red;
-    width: 60%;
+    box-shadow: 0px 0px 20px -9px hsl(210, 9%, 78%);
+    width: 55%;
     margin: auto;
     min-height: 275px;
     text-align: center;
     border-radius: 20px;
     margin-top: 125px;
+    position: absolute;
+    z-index: 10;
+    background-color: white;
+    bottom: -1690px;
+    right: 320px;
 }
 
 div#get-started h1 {
