--- a/css/style.css
+++ b/css/style.css
@@ -176,19 +176,24 @@ body {
 
 /* Overlap div */
 
-div#get-started {
+#overlap {
+    position: relative;
+    border: 1px solid red;
+}
+
+#overlap div#get-started {
+    background-color: white;
     box-shadow: 0px 0px 20px -9px hsl(210, 9%, 78%);
-    width: 55%;
-    margin: auto;
-    min-height: 275px;
     text-align: center;
+    min-height: 280px;
     border-radius: 20px;
-    margin-top: 125px;
     position: absolute;
     z-index: 10;
-    background-color: white;
-    bottom: -1690px;
-    right: 320px;
+    width: 56%;
+    left: 50%;
+    margin-left: -28%;
+    top: 50%; 
+    margin-top: -190px;
 }
 
 div#get-started h1 {
@@ -202,10 +207,11 @@ div#get-started button {
     height: 80px;
     border-radius: 40px;
     background-color:hsl(322, 100%, 66%);
-    color: white;
+    color: hsla(194, 100%, 96%, 0.899);
     font-family: "Open Sans", sans-serif; 
-    font-size: 18px;
-    font-weight: bold;
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 10px;
 }
 
 /* FOOTER */
