Add a global section to the media query. Add the body-div class and change the min-height to 650px

--- a/css/style.css
+++ b/css/style.css
@@ -329,6 +329,12 @@ footer div#footer-right p {
 /* Media Queries */
 
  @media(max-width: 500px) {
+
+/* Global */
+
+.body-div {
+    min-height: 650px;
+}
      
 /* Showcase section */
 
