--- a/css/style.css
+++ b/css/style.css
@@ -477,10 +477,26 @@ footer div#footer-right p {
     text-align: center;
 }
 
-#main div#users img {
+#main div#users h2, #main div#users img, #main div#users p {
     position: relative;
+}
+
+#main div#users img {
     height: 240px;
     margin-left: 30px;
-    bottom: 120px;
+    bottom: 35px;
+}
+
+#main div#users h2 {
+    top: 395px;
+}
+
+#main div#users p {
+    line-height: 1.6em;
+    width: 72%;
+    left: 50%;
+    margin-left: -36%;
+    top: 395px;
+
 }
 }
