--- a/css/style.css
+++ b/css/style.css
@@ -447,6 +447,7 @@ footer div#footer-right p {
 #main div#flow {
     width: 100%;
     text-align: center;
+    margin-bottom: -80px;
 }
 
 #main div#flow img {
