--- a/css/style.css
+++ b/css/style.css
@@ -506,5 +506,18 @@ footer div#footer-right p {
     width: 95%;
     left: 50%;
     margin-left: -47.5%;
+    min-height: 230px;
+}
+
+#overlap div#get-started h1 {
+    position: relative;
+    bottom: 20px;
+    font-size: 23px;
+}
+
+#overlap div#get-started button {
+    width: 60%;
+    height: 55px;
+    font-size: 14px;
 }
 }
