Add a negative bottom margin for the overlap section to reduce the gap between it and the footer for the mobile layout

--- a/css/style.css
+++ b/css/style.css
@@ -507,6 +507,10 @@ footer div#footer-right p {
 
 /* Overlap */
 
+#overlap {
+    margin-bottom: -50px;
+}
+
 #overlap div#get-started {
     width: 95%;
     left: 50%;
