Add a bottom padding to the p elements in the footer-left div. Change height of the spans div. And readjust positioning of the img2 and img3 elements of the spans div. All for mobile layout

--- a/css/style.css
+++ b/css/style.css
@@ -554,15 +554,25 @@ footer div#footer-left #footer-logo {
 
 footer div#footer-left p {
     margin-top: 5px;
+    padding-bottom: 19px;
 }
 
 footer div#spans {
     margin-top: 12px;
     padding-right: 30px;
+    height: 270px;
 }
 
 footer div#spans #img1, #img2, #img3 {
     height: 22px;
+}
+
+footer div#spans #img1 {
+    padding-bottom: 50px;
+}
+
+footer div#spans #img2 {
+    padding-bottom: 15px;
 }
 
 }
