--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,6 @@ body {
 
 #overlap {
     position: relative;
-    border: 1px solid red;
 }
 
 #overlap div#get-started {
@@ -538,13 +537,11 @@ footer {
 
 footer div.container {
     width: 100%;
-    border: 1px solid orange;
     margin-left: -30px;
 }
 
 footer div#footer-left {
     width: 100%;
-    border: 1px solid red;
     margin-left: 0px;
 }
 
@@ -582,11 +579,12 @@ footer div#footer-middle {
 }
 
 footer div#footer-middle-a {
-    margin-top: 37px;
+    margin-top: 60px;
+    margin-bottom: -20px;
 }
 
 footer div#footer-middle-b {
-    margin-top: 21px;
+    margin-top: 42px;
     margin-left: -36px;
 }
 
@@ -602,5 +600,6 @@ footer div#footer-right {
 footer div#footer-right p {
     position: relative;
     bottom: 145px;
+    font-size: 14px;
 }
 }
